Thu Jun 26 15:13:40 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/MessageTracker.cpp:

          Added logging when done waiting for pending messages.

Thu Jun 26 14:16:38 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/LargeSample/publisher.cpp:
        * tests/DCPS/LargeSample/subscriber.cpp:

          Added log messages to identify what is going on when publisher
          or subscriber times out.

Wed Jun 25 18:57:43 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/MessageTracker.cpp:

          Added logging to identify when indefinitely waiting for
          pending messages.

        * tests/DCPS/ConfigTransports/run_test.pl:
        * tests/DCPS/FooTest3_0/run_test.pl:
        * tests/DCPS/FooTest5/run_test.pl:
        * tests/DCPS/LargeSample/run_test.pl:
        * tests/DCPS/Messenger/run_test.pl:

          Using wait_kill subroutines in Run_Test.pm.

Wed Jun 25 17:10:51 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Added subroutines to do the common task of waiting to kill the
          process and reporting status, including reporting timestamp to
          identify if delay is too short for completing processing.  Also
          added other helper subroutines.

        * tests/DCPS/PersistentInfoRepo/run_test.pl:

          Changed to use subroutines in Run_Test.pl.

Wed Jun 25 16:06:59 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/RTPS/Sedp.cpp:

          Added explicit call to shutdown the task.

        * dds/DCPS/RTPS/Spdp.cpp:

          Added explicitly shutting down sedp to ensure its task can stop
          processing messages before spdp's data members start getting
          deleted.

Tue Jun 24 17:48:51 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendControlElement.cpp:
